--- a/views/subirArchivo.ejs
+++ b/views/subirArchivo.ejs
@@ -111,8 +111,8 @@
   <div id="subir">
   <div class="row">
   <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 panel-center-d">
-  		<h3><% if(resultado !== null){ %>
-        <%= resultado %>
+  		<h3><% if(nombre !== null){ %>
+        <%= nombre %>
         <% } %>
 </h3>
         <h5 style="color: #74DF00;"><strong>Subir archivo</strong></h5>
