--- a/views/verLista.ejs
+++ b/views/verLista.ejs
@@ -117,15 +117,22 @@
         <% if(error !== null){ %>
           <div class="alert alert-info" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-          <span class="sr-only">Error:<%= error %></span>
+          <span class="" style="color:red">Error:<%= error %></span>
           </div>
         <% }else{ %>
         <form action="/enviarApi" method="post">
         	<input type="hidden" value="<%=id%>" name="idLista">
 		  <h6>Cuando quieras enviar la lista puedes hacer click en enviar</h6>
-		  <small>Para volver al inicio click <a href="localhost:4000">aqui</a></small><br>
+		  <small>Para volver al inicio click <a href="http://localhost:4000">aqui</a></small><br>
 		  <button type="submit" class="btn btn-primary">Enviar</button>
 		</form>
+        <% }%>
+
+        <% if(estado !== null){ %>
+          <div class="alert alert-info" role="alert">
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+          <span class="">Estado:<%= estado %></span>
+          </div>
         <% }%>
 
         <% if(resultado !== null){  var c = 0 ;%>
@@ -167,25 +174,7 @@
 
     </div>
   </div>
-    <script type="text/javascript">
-    $(document).on('change', '.btn-file :file', function() {
-    var input = $(this),
-          numFiles = input.get(0).files ? input.get(0).files.length : 1,
-        label = input.val().replace(/\\/g, '/').replace(/.*\//, '');
-      input.trigger('fileselect', [numFiles, label]);
-    });
-    $(document).ready( function() {
-        $('.btn-file :file').on('fileselect', function(event, numFiles, label) {
-          var input = $(this).parents('.input-group').find(':text'),
-          log = numFiles > 1 ? numFiles + ' files selected' : label;
-          if( input.length ) {
-          input.val(log);
-          } else {
-          if( log ) alert(log);
-          }
-         });
-  });
-  </script>
+    
 			</section>
 		</div>
 			<footer class="panel-footer parr1">
